--- a/backend/package.json
+++ b/backend/package.json
@@ -2,25 +2,27 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "config": "^3.3.7",
-    "dotenv": "^16.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8",
-    "mongoose-id-validator": "^0.6.0",
+    "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
-    "swagger-ui-express": "^4.4.0",
-    "winston": "^3.7.2",
-    "yamljs": "^0.3.0"
+    "supertest": "^6.2.3"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0",
+    "jest-mock-req-res": "^1.0.2"
   }
 }
