--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
-    "supertest": "^6.2.3"
+    "supertest": "^6.2.3",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "jest": "^28.1.0",
