--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node ./src/index.js"
+    "start": "nodemon ./src/index.js",
+    "deploy": "cd ../frontend && ng build && cd ../backend && docker-compose up"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
+    "mongoose-bcrypt": "^1.9.0",
+    "mongoose-id-validator": "^0.6.0",
     "morgan": "^1.10.0",
     "supertest": "^6.2.3",
-    "winston": "^3.7.2"
+    "swagger-ui-express": "^4.4.0",
+    "winston": "^3.7.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "jest": "^28.1.0",
