--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     app:
-        container_name: fapi02_vd
+        container_name: Library
         build:
             dockerfile: Dockerfile
             context: .
