--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "angular-feather": "^6.3.0",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
